[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "plant-health-analyzer"
version = "1.0.0"
description = "Plant health monitor."
authors = [{ name = "pat8901" }]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: GPLV3 License",
]
requires-python = "~=3.10"

dependencies = ["isort", "pip", "pytest", "tuna"]

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[project.scripts]
pha = "src.main:main"
